--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "format": "prettier --write ./src/"
+        "format": "prettier --write ./src/",
+        "lint:js": "eslint ./src/**/*.js"
     },
     "repository": {
         "type": "git",
@@ -19,6 +20,9 @@
     },
     "homepage": "https://github.com/AshDrow/Kursovaya_4#readme",
     "devDependencies": {
+        "eslint": "^8.24.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.2.1",
         "prettier": "2.7.1"
     }
 }
