--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "format": "prettier --write **/*.js",
+        "format": "prettier --write .",
         "lint:js": "eslint **/*.js",
-        "lint:css": "stylelint **/*.scss",
-        "lint": "npm run lint:js && npm run lint:css",
+        "lint:scss": "stylelint **/*.scss",
+        "lint": "npm run lint:js && npm run lint:scss",
         "prepare": "husky install"
     },
     "repository": {
