--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,11 +1,5 @@
 {
-    "extends": [
-        "stylelint-config-standard",
-        "stylelint-config-standard-scss",
-        "stylelint-config-prettier",
-        "stylelint-config-prettier-scss",
-        "stylelint-prettier/recommended"
-    ],
+    "extends": ["stylelint-config-standard", "stylelint-config-standard-scss", "stylelint-config-prettier", "stylelint-config-prettier-scss", "stylelint-prettier/recommended"],
     "rules": {
         "selector-class-pattern": null,
         "font-family-name-quotes": "always-unless-keyword",
