--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,12 +7,14 @@
     "extends": ["eslint:recommended", "prettier"],
     "plugins": ["prettier"],
     "parserOptions": {
-        "ecmaVersion": 2020
+        "ecmaVersion": 2020,
+        "sourceType": "module"
     },
     "rules": {
-        "prettier/prettier": "error",
+        "prettier/prettier": ["error", { "endOfLine": "auto" }],
         "camelcase": ["error"],
         "eqeqeq": ["error", "always"],
         "max-len": ["error", { "code": 200 }]
-    }
+    },
+    "ignorePatterns": "bundle.js"
 }
