--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
     "name": "Kursovaya_4",
     "version": "1.0.0",
-    "description": "",
+    "description": "bla bla bla",
     "main": "index.js",
     "scripts": {
+        "cleanDist": "rm -rf dist/",
+        "cleanNodMod": "rm -rf node_modules/",
         "test": "echo \"Error: no test specified\" && exit 1",
         "format": "prettier --write .",
         "lint:js": "eslint **/*.js",
         "lint:scss": "stylelint **/*.scss",
         "lint": "npm run lint:js && npm run lint:scss",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "buildProd": "webpack --node-env production",
+        "buildDev": "webpack --node-env development",
+        "b1": "process.env['NODE_ENV'] = 'production' webpack",
+        "start": "webpack-dev-server --open"
     },
     "repository": {
         "type": "git",
@@ -23,16 +29,31 @@
     },
     "homepage": "https://github.com/AshDrow/Kursovaya_4#readme",
     "devDependencies": {
+        "copy-webpack-plugin": "11.0.0",
+        "cross-env": "7.0.3",
+        "css-loader": "6.7.1",
+        "css-minimizer-webpack-plugin": "4.2.1",
+        "dotenv": "16.0.3",
         "eslint": "8.24.0",
         "eslint-config-prettier": "8.5.0",
         "eslint-plugin-prettier": "4.2.1",
+        "html-webpack-plugin": "5.5.0",
         "husky": "8.0.1",
+        "mini-css-extract-plugin": "2.6.1",
+        "node-sass": "7.0.3",
         "prettier": "2.7.1",
+        "sass": "1.55.0",
+        "sass-loader": "13.0.2",
+        "style-loader": "3.3.1",
         "stylelint": "14.12.1",
         "stylelint-config-prettier": "9.0.3",
         "stylelint-config-prettier-scss": "0.0.1",
         "stylelint-config-standard": "28.0.0",
         "stylelint-config-standard-scss": "5.0.0",
-        "stylelint-prettier": "2.0.0"
-    }
+        "stylelint-prettier": "2.0.0",
+        "webpack": "5.74.0",
+        "webpack-cli": "4.10.0",
+        "webpack-dev-server": "4.11.1"
+    },
+    "dependencies": {}
 }
