--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "format": "prettier --write .",
         "lint:js": "eslint **/*.js",
         "lint:scss": "stylelint **/*.scss",
-        "lint": "npm run lint:js && npm run lint:scss",
+        "lint:ts": "tsc --noEmit",
+        "lint": "npm run lint:js && npm run lint:scss && npm run lint:ts",
         "prepare": "husky install",
         "buildProd": "webpack --node-env production",
         "buildDev": "webpack --node-env development",
@@ -29,16 +30,16 @@
     },
     "homepage": "https://github.com/AshDrow/Kursovaya_4#readme",
     "devDependencies": {
+        "@types/lodash": "^4.14.186",
         "copy-webpack-plugin": "11.0.0",
-        "cross-env": "7.0.3",
         "css-loader": "6.7.1",
         "css-minimizer-webpack-plugin": "4.2.1",
-        "dotenv": "16.0.3",
         "eslint": "8.24.0",
         "eslint-config-prettier": "8.5.0",
         "eslint-plugin-prettier": "4.2.1",
         "html-webpack-plugin": "5.5.0",
         "husky": "8.0.1",
+        "lodash": "4.17.21",
         "mini-css-extract-plugin": "2.6.1",
         "node-sass": "7.0.3",
         "prettier": "2.7.1",
@@ -51,6 +52,8 @@
         "stylelint-config-standard": "28.0.0",
         "stylelint-config-standard-scss": "5.0.0",
         "stylelint-prettier": "2.0.0",
+        "ts-loader": "9.4.1",
+        "typescript": "4.8.4",
         "webpack": "5.74.0",
         "webpack-cli": "4.10.0",
         "webpack-dev-server": "4.11.1"
